# Jogo_SFML

./: CMakeLists.txt  README.md  UML_jogo.mdj
assets/: map1.txt  map2.txt  map3.txt  mapa1.txt
diagrams/: Diagrama-PreReuniao2.mdj  Final.mdj  Pos_Reuniao2_Ajustado.mdj  Pos_Reuniao3.mdj  Pre_Final-1.mdj  Pre_Final-2.mdj  Pre_Final-3.mdj  Pre_Final-4.mdj  Pre_Reuniao4.mdj  UML_Jogo-PosReuniao2.mdj  UML_Jogo-PreReuniao2.mdj  UML_jogo-posReuniao1.mdj  UML_jogo-posReuniao1_ajustado.mdj
include/: BadPortal.h  Being.h  Body.h  Boss.h  BossThread.h  Enemy.h  EnemyGenerator.h  Entidade.h  Entity.h  Events.h  Fase.h  Flower.h  GameStateMachine.h  Generator.h  Ghost.h  GoodPortal.h  Graphics.h  Level.h  List.h  Main.h  Map.h  Physics.h  Player.h  PlayerStats.h  Projectile.h  Ranking.h  Saw.h  Spears.h  State.h  Thread.h  Treadmill.h  Vector2D.h  Zombie.h
include/states/: ChooseMenuState.h  GameOverState.h  GameStateMachine.h  MainMenuState.h  PauseState.h  PlayState.h  PlayerSelectionState.h  RankingViewState.h  State.h
saves/: scores.txt
source/: BadPortal.cpp  Being.cpp  Body.cpp  Boss.cpp  BossThread.cpp  Enemy.cpp  EnemyGenerator.cpp  Entidade.cpp  Entity.cpp  Events.cpp  Fase.cpp  Flower.cpp  GameStateMachine.cpp  Generator.cpp  Ghost.cpp  GoodPortal.cpp  Graphics.cpp  Level.cpp  List.cpp  Main.cpp  Map.cpp  Physics.cpp  Player.cpp  PlayerStats.cpp  Projectile.cpp  Ranking.cpp  Saw.cpp  Spears.cpp  State.cpp  Thread.cpp  Threadmill.cpp  Treadmill.cpp  Vector2D.cpp  Zombie.cpp  main.cpp
source/states/: ChooseMenuState.cpp  GameOverState.cpp  GameStateMachine.cpp  MainMenuState.cpp  PauseState.cpp  PlayState.cpp  PlayerSelectionState.cpp  RankingViewState.cpp  State.cpp
